--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -107,6 +107,16 @@ a {
 }
 
 
+.card {
+  max-width: 400px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #000000;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+
+}
+
 /* shit pasted */
 
 /* @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
